Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-16130

wrong error message adding AS ROW START to versioned table

    XMLWordPrintable

Details

    Description

      create table t1 (a int,
      rs timestamp(6) as row start,
      re timestamp(6) as row end,
      period for system_time(rs,re)) with system versioning;
      alter table t1 add column rss timestamp(6) as row start;
      

      mysqltest: At line 6: query 'alter table t1 add column rss timestamp(6) as row start' failed: 4124: Table `t1` is not system-versioned
      

      Attachments

        Issue Links

          Activity

            People

              midenok Aleksey Midenkov
              serg Sergei Golubchik
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.5h
                  0.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.