MDEV-16130 wrong error message adding AS ROW START to versioned table

Closes tempesta-tech/mariadb#494